Tighten up line height in menu items, so titles that wrap stay visually as one item, fixes #4

--- a/src/sass/navigation/_menus.scss
+++ b/src/sass/navigation/_menus.scss
@@ -36,7 +36,7 @@
 
 			li {
 				padding: 0;
-				line-height: 1.6;
+				line-height: 1.25;
 				background-color: white;
 			}
 
